# Feature-Encoding

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  tasks.py
.github/workflows/: python-package.yml
src/feature_encoding/: base.py  direct.py  gray.py  threshold.py
tests/: test_direct_encoding.py  test_gray_encoding.py  test_threshold_encoding.py
