[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "feature_encoding"
version = "0.0.32"
authors = [
    { name="Cristopher Hernandez", email="22552070+CristopherH95@users.noreply.github.com" },
]
description = "Package defining binary encoding methods for feature vectors."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=1.20.0",
]
[project.optional-dependencies]
dev = [
    "invoke~=2.2.0",
    "pip-tools~=7.3.0"
]